--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fluentui/react": "^7.146.1",
+    "@microsoft/mgt": "^2.0.0-preview.3",
+    "@microsoft/mgt-react": "^2.0.0-preview.3",
+    "@microsoft/microsoft-graph-types": "^1.23.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
