--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "dependencies": {
     "@fluentui/react": "^7.146.1",
-    "@microsoft/mgt-msal-provider": "^2.0.0-preview.6959a48",
-    "@microsoft/mgt-react": "^2.0.0-preview.6959a48",
+    "@microsoft/mgt-msal-provider": "^2.0.0",
+    "@microsoft/mgt-react": "^2.0.0",
     "@microsoft/microsoft-graph-types": "^1.27.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
